# GSG

./: README.md
MATLAB/: README.md
MATLAB/src/: read_ecl.m  read_gsg.m  read_gsg_all.m  write_gsg.m  write_gsg_all.m
c++/: CMakeLists.txt  README.md
c++/examples/: CMakeLists.txt  Porosity.GSG  reservoir.gsg  reservoir2.gsg
c++/src/: GSGfile.cpp  GSGfile.h
c++/test/: CMakeLists.txt  main.cpp
